--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,21 @@
 name: Dockerized CI
 on:
-    push:
-        branches: ["main"]
-    pull_request:
-        branches: ["main"]
-    workflow_dispatch:
+  push:
+    branches: ["main"]
+  pull_request:
+      branches: ["main"]
+  workflow_dispatch:
 
 jobs:
-    build-and-test:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Check out repository
-              uses: actions/checkout@v4
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-            - name: Build the test Docker image
-              uses: docker build . --file Dockerfile.test --tag rest-api-tests4
+      - name: Build the test Docker image
+        run: docker build . --file Dockerfile.test --tag rest-api-tests
 
-            - name: Run tests in Docker
-              uses: docker run --rm rest-api-tests
-            
+      - name: Run tests in Docker
+        run: docker run --rm rest-api-tests
             
